more ui changes.  added icons, tweaked colors, removed fluid layout from left rail (fix for wrapping of menu items)

--- a/PageLoadStatsPy/pageloadstats/static/css/base.css
+++ b/PageLoadStatsPy/pageloadstats/static/css/base.css
@@ -1,6 +1,6 @@
 .header{
 	font-size: 42px;
-	color: green;
+	color: #00cc00;
 	margin-top: 15px;
 	margin-bottom: 20px;
     align:left;
